--- a/block-BJaaic/code/index.html
+++ b/block-BJaaic/code/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Assessment: Inheritance</title>
   </head>
   <body>
+    <h1 style="font-size: 5rem; color: rgb(55, 54, 99); text-align: center">
+      Assessment: Inheritance
+    </h1>
     <script src="./index.js"></script>
   </body>
 </html>
