Assignment: Book Store Using OOP-block-2

--- a/block-BJaail/code/index.html
+++ b/block-BJaail/code/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>My Book List</h1>
+      <h1>📖 My Book List</h1>
       <div class="inputs">
         <label for="">Title</label>
         <input class="title" type="text" />
@@ -22,8 +22,8 @@
 
       <div class="data">
         <h2>title</h2>
-        <h3>author</h3>
-        <h4>isbn#</h4>
+        <h2>author</h2>
+        <h2>isbn#</h2>
       </div>
       <ul class="books"></ul>
     </div>
